Right col image fix on mobile

--- a/src/components/base.css
+++ b/src/components/base.css
@@ -248,6 +248,10 @@ h4,
         left: 0;
         width: 50vw;
         padding: 10px 0;
+
+        @media (--medium-breakpoint-down) {
+          display: none;
+        }
       }
     }
   }
